--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The better unblocked games website." />
     <meta name="keywords" content="front-end web developer, unblocked, games, google sites, unblocked games mom, ublocked, code, coding, programmer, development, javascript, jquery, bootstrap, sass, less, git" />
-    <meta name="author" content="3kh0" />
-    <meta content="3kh0" property="og:title" />
+    <meta name="author" content="SchoolisFun" />
+    <meta content="SchoolisFun" property="og:title" />
     <meta content="The better unblocked games website." property="og:description" />
     <meta content="./images/logo.png" property="og:image" />
-    <title>3kh0</title>
+    <title>SchoolisFun</title>
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link href="./images/logo.png" rel="icon" />
     <link href="./css/index.css" rel="stylesheet" />
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="./js/main.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4301359771500388"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="navbar">
@@ -33,12 +35,12 @@
       </div>
     </div>
 
-    <div class="title">3kh0</div>
+    <div class="title">SchoolisFun</div>
     <center>
       <div class="message homemessage" onclick="setRandomSay()">...</div>
       <p class="section-text"><a href="./blog/v4release">Welcome to v4!</a></p>
       <br />
-      <iframe title="AlienHub" class="alien" src="https://hub.alienhub.xyz/show?utm_medium=3kh0" scrolling="no" width="450" height="150"></iframe>
+      <iframe title="AlienHub" class="alien" src="https://hub.alienhub.xyz/show?utm_medium=SchoolisFun" scrolling="no" width="450" height="150"></iframe>
       <a href="./projects" class="play-link" data-aos="fade-up"><button class="play">Play Now</button></a>
     </center>
 
@@ -46,7 +48,7 @@
     <div id="reviews"></div>
     <div id="my-keen-slider" class="keen-slider"></div>
 
-    <footer>© 3kh0 2023</footer>
+    <footer>© SchoolisFun 2023</footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
