--- a/index.html
+++ b/index.html
@@ -38,15 +38,11 @@
     <div class="title">SchoolisFun</div>
     <center>
       <div class="message homemessage" onclick="setRandomSay()">...</div>
-      <p class="section-text"><a href="./blog/v4release">Welcome to v4!</a></p>
+      <p class="section-text"><a href="./blog/v4release">The real games website, unblocked and frequently updated!</a></p>
       <br />
       <iframe title="AlienHub" class="alien" src="https://hub.alienhub.xyz/show?utm_medium=SchoolisFun" scrolling="no" width="450" height="150"></iframe>
       <a href="./projects" class="play-link" data-aos="fade-up"><button class="play">Play Now</button></a>
     </center>
-
-    <a href="#reviews"><button class="reviews-link">Reviews</button></a>
-    <div id="reviews"></div>
-    <div id="my-keen-slider" class="keen-slider"></div>
 
     <footer>© SchoolisFun 2023</footer>
 
