--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="./js/main.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4301359771500388"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4301359771500388"
      crossorigin="anonymous"></script>
   </head>
   <body>
@@ -38,8 +38,16 @@
     <div class="title">SchoolisFun</div>
     <center>
       <div class="message homemessage" onclick="setRandomSay()">...</div>
-      <p class="section-text"><a href="./blog/v4release">The real games website, unblocked and frequently updated!</a></p>
+      <p class="section-text">The real games website, unblocked and frequently updated!</p>
       <br />
+      <!-- Featured Game Section -->
+      <a href="YOUR_FEATURED_GAME_EMBED_LINK" class="featured-game">
+        <div class="featured-game-box">
+          <!-- Add your game icon or content here -->
+          <img src="path/to/your/game-icon.png" alt="Game Icon">
+        </div>
+        <p class="featured-game-text">Featured Game</p>
+      </a>
     </center>
 
     <footer>© SchoolisFun 2023</footer>
