--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <p class="section-text">The real games website, unblocked and frequently updated!</p>
       <br />
       <!-- Featured Game Section -->
-      <a href="YOUR_FEATURED_GAME_EMBED_LINK" class="featured-game">
+      <a href="https://narrow.one/" class="featured-game">
         <div class="featured-game-box">
           <!-- Add your game icon or content here -->
-          <img src="path/to/your/game-icon.png" alt="Game Icon">
+          <img src="./images/narrow.png" alt="Game Icon">
         </div>
         <p class="featured-game-text">Featured Game</p>
       </a>
