--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
       </div>
     </div>
 
-    <div class="title">SchoolisFun</div>
-    <center>
-      <div class="message homemessage" onclick="setRandomSay()">...</div>
-      <p class="section-text">The real games website, unblocked and frequently updated!</p>
-      <br />
-      <!-- Featured Game Section -->
-      <a href="https://narrow.one/" class="featured-game">
-        <div class="featured-game-box">
-          <!-- Add your game icon or content here -->
-          <img src="./images/narrow.png" alt="Game Icon" style="width: 200px; height: 200px;">
-        </div>
+   <div class="title">SchoolisFun</div>
+<center>
+    <div class="message homemessage" onclick="setRandomSay()">...</div>
+    <p class="section-text">The real games website, unblocked and frequently updated!</p>
+    <br />
+    <!-- Featured Game Section -->
+    <div class="featured-game">
+        <a href="https://narrow.one/" class="featured-game-box">
+            <!-- Add your game icon or content here -->
+            <img src="./images/narrow.png" alt="Game Icon" style="width: 200px; height: 200px;">
+        </a>
         <p class="featured-game-text">Featured Game</p>
-      </a>
-    </center>
-
+    </div>
+</center>
     <footer>© SchoolisFun 2023</footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
