--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta content="3kh0" property="og:title" />
     <meta content="The better unblocked games website." property="og:description" />
     <meta content="/images/logo.png" property="og:image" />
-    <title>Error | 3kh0</title>
+    <title>Error | SchoolisFun</title>
     <link href="/images/logo.png" rel="icon" />
     <link href="/css/index.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
