--- a/credits.html
+++ b/credits.html
@@ -32,8 +32,7 @@
       <p>SchoolisFun is a open-source games website for any gamer in school.</p>
       <p>The website is owned and maintained by Bas1c and Saintz (Echo)</p>
       <br />
-      <p>Main devlopers</p>
-      <p>Other Developers</p>
+      <p>Main developers</p>
       <ul>
         <li data-github="Ephixity"></li>
         <li data-github="bas1csyntax"></li>
