--- a/changelog.html
+++ b/changelog.html
@@ -9,7 +9,7 @@
     <meta content="3kh0" property="og:title" />
     <meta content="The better unblocked games website." property="og:description" />
     <meta content="./images/logo.png" property="og:image" />
-    <title>Changelog | 3kh0</title>
+    <title>Changelog | SchoolisFun</title>
     <link href="./images/logo.png" rel="icon" />
     <link href="./css/index.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
@@ -578,7 +578,7 @@
       <changelog-changed>Updated the "green text" on the homepage.</changelog-changed>
     </div>
 
-    <footer>© 3kh0 2023</footer>
+    <footer>© SchoolisFun 2024</footer>
 
     <script src="./js/index.js"></script>
     <script type="text/javascript">
