--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <link href="./css/index.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
 
-    <title>Projects | 3kh0</title>
+    <title>Projects | SchoolisFun</title>
   </head>
 
   <body>
@@ -42,7 +42,7 @@
     </div>
 
     <center>
-      <input class="searchbar" placeholder="Search 3kh0" />
+      <input class="searchbar" placeholder="Search the land of unblocked games" />
     </center>
     <div class="saveItems">
       <button class="button" onclick="downloadMainSave()">Download Save</button>
@@ -51,7 +51,7 @@
     </div>
 
     <input class="hiddenUpload" type="file" accept=".save" />
-    <div class="hii" hidden>hi join discord.gg/3kh0 pls pls pls tysm ❤️ also how did you see this?</div>
+    <div class="hii" hidden>Hi <3 how did you find this??</div>
 
     <div class="games"></div>
 
@@ -89,10 +89,10 @@
 
     <div class="nogames">
       <h1>¯\(°_o)/¯</h1>
-      <p>No results found. If your want to add a game, please make a suggestion to our <a href="https://github.com/3kh0/3kh0.github.io/issues">GitHub</a>.</p>
+      <p>No results found. If you want to add a game, talk to the main developer.</a>.</p>
     </div>
 
-    <footer>© 3kh0 2023</footer>
+    <footer>© SchoolisFun 2024</footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
     <script src="./js/index.js"></script>
