--- a/assets/game.html
+++ b/assets/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="shortcut icon" href="../images/logo.png" type="image/png" />
-    <title>Loading... | 3kh0</title>
+    <title>Loading... | SchoolisFun</title>
     <style>
       html,
       body {
