--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
       document.getElementById("plat").innerHTML = navigator.platform;
       document.getElementById("online").innerHTML = navigator.onLine;
     </script>
-    <footer>© 3kh0 2023</footer>
+    <footer>© SchoolisFun 2024</footer>
     <script src="/js/index.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://cdn.jsdelivr.net/nwmatcher/1.2.5/nwmatcher.min.js"></script>
