--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
     </center>
 
     <div id="sfn" style="display: none;" class="message">
-      Please make a issue about this happening on the <a href="https://github.com/3kh0/3kh0.github.io/issues">Github issue tracker</a> Requested URL: <span id="full">Fetching...</span><br />
+      </a> Requested URL: <span id="full">Fetching...</span><br />
       Referrer: <span id="ref">Fetching...</span><br />
       Title: <span id="title">Fetching...</span><br />
       Screen height: <span id="height">Fetching...</span><br />
