--- a/extras.html
+++ b/extras.html
@@ -9,7 +9,7 @@
     <meta content="3kh0" property="og:title" />
     <meta content="The better unblocked games website." property="og:description" />
     <meta content="/images/logo.png" property="og:image" />
-    <title>Extras | 3kh0</title>
+    <title>Extras | SchoolisFun</title>
     <link href="./images/logo.png" rel="icon" />
     <link href="./css/index.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
@@ -37,9 +37,10 @@
       <a href="./webhookmessenger"><button class="button">WebhookMessenger</button></a>
       <a href="./libypasser"><button class="button">Linkvertise Bypasser</button></a>
       <a href="./jsdeobsfucator"><button class="button">JS deobsfucator</button></a>
+      <a href="./proxy"><button class="button">Proxy</button></a>
     </div>
 
-    <footer>© 3kh0 2023</footer>
+    <footer>© SchoolisFun 2024</footer>
 
     <script src="./js/index.js"></script>
     <div id="google_translate_element"></div>
