--- a/proxy.html
+++ b/proxy.html
@@ -1,2 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Web Page</title>
+</head>
+<body>
 
-<!doctype html><html lang="en"><head><title>browser.rammerhead.org</title><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="shortcut icon" href="/favicon.png"/><script defer="defer" src="/static/js/main.0af72863.js"></script><link href="/static/css/main.bd4ecdce.css" rel="stylesheet"></head><body><noscript>You're going to need to enable JavaScript to run this browser.</noscript><div id="root"></div></body></html>
+<iframe src="https://browser.rammerhead.org" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+
+</body>
+</html>
