--- a/proxy.html
+++ b/proxy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Web Page</title>
+    <title>Proxy</title>
 </head>
 <body>
 
