--- a/extras.html
+++ b/extras.html
@@ -38,6 +38,7 @@
       <a href="./libypasser"><button class="button">Linkvertise Bypasser</button></a>
       <a href="./jsdeobsfucator"><button class="button">JS deobsfucator</button></a>
       <a href="./proxy"><button class="button">Proxy</button></a>
+      <a href="./movie-web"><button class="button">Movie-Web</button></a>
     </div>
 
     <footer>© SchoolisFun 2024</footer>
