--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="section-title">About 3kh0</div>
+    <div class="section-title">About SchoolisFun</div>
     <div class="section-text">
       <p>Welcome to SchoolisFun, the better unblocked games website.</p>
       <p>SchoolisFun was originally created by bas1csyntax but has added Ephixity. This is the fourth version with a new interface and cleaner design. All games belong to their creators, thank you all for making the web fun!</p>
