--- a/changelog.html
+++ b/changelog.html
@@ -30,7 +30,8 @@
     <div class="section-title">Changelog</div>
     <div class="section-text">
       <p>Dec, 2, 2023</p>
-      <changelog-changed>Big Updates on Website Page</changelog-changed>
+      <changelog-changed>Big Updates on Website</changelog-changed>
+      </changelog-added> First Release, Alpha!</changelog-added>
       <p>Dec, 1, 2023</p>
       <p>Today, SchoolisFun was born!</p>
       <changelog-added>New Games</changelog-added>
