--- a/about.html
+++ b/about.html
@@ -34,8 +34,7 @@
       <br />
 
       <b>Version</b>
-      <p id="version">&#xfeff;</p>
-      <p id="version-warning" class="version-warning"></p>
+      <p>Alpha (!STILL IN DEVELOPMENT!)</p>
       <br />
 
     <footer>© SchoolisFun</footer>
