--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <p>Alpha (!STILL IN DEVELOPMENT!)</p>
       <br />
 
-    <footer>© SchoolisFun</footer>
+    <footer>© SchoolisFun 2024</footer>
 
     <script src="./js/about.js"></script>
     <script src="./js/index.js"></script>
