--- a/movie-web.html
+++ b/movie-web.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<iframe src="https://movie-web.app/" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://movie-web.app/search/movie" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
