--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
     <meta content="The better unblocked games website." property="og:description" />
     <meta content="/images/logo.png" property="og:image" />
 
-    <title>Settings | 3kh0</title>
+    <title>Settings | SchoolisFun</title>
     <link href="./images/logo.png" rel="icon" />
     <link href="./css/index.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
@@ -112,7 +112,7 @@
       <label for="head">Set custom color</label>
     </div>
 
-    <footer>© 3kh0 2023</footer>
+    <footer>© SchoolisFun 2024</footer>
 
     <script src="./js/index.js"></script>
     <script src="./js/settings.js"></script>
