--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link href="./images/logo.png" rel="icon" />
     <link href="./css/index.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
+    <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer> new Crate({ server: '1184106241706971228', // SchoolisFun | Offical Server channel: '1184106242147352672' // #💬・general }) </script>
     <link rel="manifest" href="/manifest.json" />
     <script src="./assets/webrtc-ip.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css" />
